# mod2k

./: Cargo.toml  LICENSE  README.md  performance.md
.github/workflows/: ci.yml
benches/: matrix.rs
src/: big_prime.rs  fast.rs  lib.rs  macros.rs  power.rs  prime.rs  traits.rs
